@@ -123,15 +123,14 @@
 	    (message "%s" matches)
 	    nil)
 	(setq highlight (ecomplete-highlight-match-line matches line))
-	(while (not (member (setq command (read-key-sequence-vector highlight))
-			    '([? ] [return] [?\r] [?\n] [?\C-g])))
+	(while (not (memq (setq command (read-event highlight)) '(? return)))
 	  (cond
-	   ((member command '([27 ?n] [?\M-n]))
+	   ((eq command ?\M-n)
 	    (setq line (min (1+ line) max-lines)))
-	   ((member command '([27 ?p] [?\M-p]))
+	   ((eq command ?\M-p)
 	    (setq line (max (1- line) 0))))
 	  (setq highlight (ecomplete-highlight-match-line matches line)))
-	(when (member command '([return] [?\r] [?\n]))
+	(when (eq command 'return)
 	  (nth line (split-string matches "\n")))))))
 
 (defun ecomplete-highlight-match-line (matches line)
