@@ -1,5 +1,8 @@
 2011-09-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* ecomplete.el (ecomplete-display-matches): Revert patch since it
+	doesn't work under XEmacs.
+
 	* nnimap.el (nnimap-map-port): New function to connect to 993 instead
 	of "imaps" to word around Windows problems.
 	(nnimap-open-connection-1): Use it.
